<resources>
    <string name="app_name">SwitchNavigationSample</string>

    <!-- Icons Description -->
    <string name="help_icon_description">Help icon</string>
    <string name="settings_icon_description">Settings icon</string>
    <string name="search_icon_description">Search icon</string>
    <string name="notifications_icon_description">Notifications icon</string>
    <string name="profile_icon_description">Profile icon</string>
    <string name="home_icon_description">Home icon</string>

    <!-- Switch Text -->
    <string name="switch_ego">Ego</string>
    <string name="switch_settings">Settings</string>
    <string name="switch_help">Help</string>
    <string name="switch_notifications">Notifications</string>
    <string name="switch_profile">Profile</string>
    <string name="switch_search">Search</string>


</resources>