<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_settings"
        android:layout_marginTop="100dp"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_help"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchSettings"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchNotifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_notifications"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchHelp"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_profile"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchNotifications"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_search"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchProfile"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchEgo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/switch_ego"
        android:layout_marginTop="30dp"
        android:layoutDirection="rtl"
        android:maxWidth="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSearch"
        android:padding="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
